--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <title>Test for GITHUB INI COURSE </title>
 </head>
 <body>
+    <img src="99grapix.png"/>
     <h2>Welcome To My Website</h2>
 </body>
